# GolfModel.jl

./: .gitignore  Manifest.toml  Project.toml  README.md  hello.py  pyproject.toml  torque.py  wolfram_lagrangian_derivation.nb
data/: Club_Data_Table.csv  coordinate_speeds_clubgolfswing.csv
sources/: 10.1371_journal.pcbi.1011462.bib  deleva.bib  jain15725743.bib  jorgensen_onthedynamics.bibtex  lampsa1975.bibtex  pericles_146026872.bib  sprigings2000.bib
src/: GolfModel.jl  Math2B.jl
test/: anim_pend.jl  bifurcation.jl  data.jl  discrete_event.jl  double_pend_lagrangian.jl  force_eqs.py  forced_single_pendulum_lagrangian.jl  full_sim.jl  golf.jl  harm_osc.jl  heater.jl  lotka.jl  newtonian_unforced_single_pendulum.jl  runtests.jl  slope_field.jl  trajectory.jl
test/plots/: anim_double_pend.jl  strobe.jl
