[project]
name = "GolfModel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.3.0",
    "polars>=1.27.1",
    "scipy>=1.16.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
